# TyphoonEngine

./: .gitignore
GameTest/: GameTest.sln
GameTest/GameTest/: CameraInput.cpp  CameraInput.h  DepthShader.cpp  DepthShader.h  GameTest.vcxproj  GameTest.vcxproj.filters  Light.h  MyGame.cpp  MyGame.h  MyInput.cpp  MyInput.h  MyRender.cpp  MyRender.h  RenderTarget.cpp  RenderTarget.h  ShadowShader.cpp  ShadowShader.h  fontBOLD.fnt  fontITALIC.fnt  main.cpp
MSVS2015/: TEngine.sln
MSVS2015/TEngine/: TEngine.vcxproj  TEngine.vcxproj.filters
source/: CMakeLists.txt  TEngine.h  stdafx.h
source/CommonSystem/: Common.h
source/CoreSystem/: Core.cpp  Core.h  IGame.cpp  IGame.h
source/GraphicsSystem/: BitmapFont.cpp  BitmapFont.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  D3DDataTypes.cpp  D3DDataTypes.h  Fps.cpp  Fps.h  Frustum.cpp  Frustum.h  GraphicUtil.h  Model.cpp  Model.h  ObjModel.cpp  ObjModel.h  Render.cpp  Render.h  RenderState.cpp  RenderState.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  StaticMesh.cpp  StaticMesh.h  Text.cpp  Text.h  Window.h
source/InputSystem/: InputListener.h  InputManager.h
source/PlatformSystem/Linux/: LinuxInputCodes.h  LinuxInputManager.cpp  LinuxInputManager.h
source/PlatformSystem/Windows/: WinInputManager.cpp  WinInputManager.h  WinWindow.cpp  WinWindow.h
source/ResourceSystem/: ModelLoader.cpp  ModelLoader.h  ms3dspec.h
source/UtilSystem/: Log.cpp  Log.h  Timer.cpp  Timer.h  Util.h
source/UtilSystem/Math/: Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  TEMath.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
(+10 files in other folders)
